--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 
+
     <application
         android:usesCleartextTraffic="true"
 
@@ -19,6 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Teams"
         tools:targetApi="31">
+        <receiver android:name=".data.repository.NotificationReplyReceiver"></receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
